# webagent-trajectory-lab

./: LICENSE  README.md  pyproject.toml
data/: demo_trajectory.jsonl
examples/: analyze.py  batch_analyze.py
tests/: test_aggregate.py  test_metrics.py
webagent_trajectory_lab/: aggregate.py  metrics.py  report.py
