[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webagent-trajectory-lab"
version = "0.1.0"
description = "Trajectory analytics for visual web agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["webagent_trajectory_lab*"]
